..F....PS. [ZBX-10076] fixed text information containing non-ASCII characters being saved incorrectly to IBM DB2 database in case of system locale misconfiguration (gleb, Oleg)
..F....... [ZBX-9989] optimized SQL queries for graphs building (Gunars, Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.14rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.0.13

3.0.13rc1 was released as 3.0.13 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.13rc1

New features:
..F....... [ZBXNEXT-1421] added service sorting by name if multiple services has same 'sortorder' value (miks)
..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)

Bug fixes:
..F....... [DEV-593] fixed multiple security issues (miks)
.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLevel=4 (gleb)
...G...... [ZBX-11902] fixed CPU count for LPAR partitions in IBM AIX (abs)
...G...... [ZBX-12260] fixed windows agent to support UTF-16LE, UCS-2, UCS-2LE encodings (vso)
..F....... [ZBX-12722] fixed scrollbar causing a JS error in "500 latest values" page due to unnecessarily initialization (Ivo)
..F....... [ZBX-12710] fixed OS type detection logic (vjaceslavs)
..F....... [ZBX-12543] fixed problems with session management (vjaceslavs)
........S. [ZBX-12259] added an informative warning about lack of data for macros used in LLD rule filter (viktors)

--------------------------------------------------------------------------------
Changes for 3.0.12

3.0.12rc1 was released as 3.0.12 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.12rc1

New features:
...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)

Bug fixes: